RESOLVED FIXED160000
REGRESSION (r203189): Webpage snapshots are partially or fully blank when edge swiping back
https://bugs.webkit.org/show_bug.cgi?id=160000
Summary REGRESSION (r203189): Webpage snapshots are partially or fully blank when edg...
Simon Fraser (smfr)
Reported 2016-07-20 17:10:16 PDT
REGRESSION (r203189): Webpage snapshots are partially or fully blank when edge swiping back
Attachments
Patch (2.25 KB, patch)
2016-07-20 17:12 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2016-07-20 17:12:33 PDT
Simon Fraser (smfr)
Comment 2 2016-07-20 17:13:09 PDT
Simon Fraser (smfr)
Comment 3 2016-07-20 17:37:44 PDT
Note You need to log in before you can comment on or make changes to this bug.